Replace nodemailer with built-in SMTP client

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
 # SMTP server configuration used by the contact form
 SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_SECURE=false
+SMTP_PORT=465 # ใช้พอร์ต SMTPS
+SMTP_SECURE=true
 SMTP_USER=your-smtp-username
 SMTP_PASS=your-smtp-password
 
 # Optional: override the display name and from address
 # SMTP_FROM=no-reply@example.com
 # SMTP_FROM_NAME=ThaiGov Portal
+# SMTP_CLIENT_NAME=portal.th.gov
 
 # Email address that will receive messages from the contact form
 CONTACT_EMAIL_TO=support@example.com
