--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "14.2.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "nodemailer": "6.9.13"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "autoprefixer": "10.4.16",
