Add STARTTLS support to SMTP helper

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,13 @@
 # SMTP server configuration used by the contact form
 SMTP_HOST=smtp.example.com
-SMTP_PORT=465 # ใช้พอร์ต SMTPS
-SMTP_SECURE=true
+SMTP_PORT=587 # พอร์ตที่รองรับ STARTTLS
+SMTP_SECURE=false
+SMTP_STARTTLS=true
+
+# หากใช้พอร์ต 465 (SMTPS) ให้ตั้งค่า:
+# SMTP_PORT=465
+# SMTP_SECURE=true
+# SMTP_STARTTLS=false
 SMTP_USER=your-smtp-username
 SMTP_PASS=your-smtp-password
 
