Switch content storage to MongoDB and Cloudinary

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,12 @@ SMTP_PASS=your-smtp-password
 
 # Email address that will receive messages from the contact form
 CONTACT_EMAIL_TO=support@example.com
+
+# MongoDB (ค่าเริ่มต้นใช้คลัสเตอร์ตัวอย่าง หากมีของคุณเองให้แทนที่)
+MONGODB_URI=mongodb+srv://hoslpn:UXvrN9rRqVYMuay6@cluster0.aop4hd6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_DB=thaigov_portal
+
+# Cloudinary สำหรับอัปโหลดรูปประกอบข่าว/ประกาศ
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
