--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^1.41.3",
+    "mongodb": "^6.5.0",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
