feat: migrate content storage to mongodb

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# MongoDB connection settings
+MONGODB_URI=mongodb+srv://username:pass@cluster0.aop4hd6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_DB=thaigov_portal
+
 # SMTP server configuration used by the contact form
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587 # พอร์ตที่รองรับ STARTTLS
