--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "mongodb": "6.6.2",
-    "next": "14.2.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "mongodb": "6.20.0",
+    "next": "15.5.5",
+    "react": "19.2.0",
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.16",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3",
-    "postcss": "8.4.35",
-    "tailwindcss": "3.4.3"
+    "@tailwindcss/postcss": "^4.1.14",
+    "autoprefixer": "10.4.21",
+    "eslint": "9.37.0",
+    "eslint-config-next": "15.5.5",
+    "postcss": "8.5.6",
+    "tailwindcss": "4.1.14"
   }
 }
